--- a/apidoc/Dockerfile
+++ b/apidoc/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /tmp
 
 ENV SWAGGER_JSON /tmp/api.yml
 
-ARG CONFIG_FILE=/backend/backend/youthichinaopenapi.yml
+ARG CONFIG_FILE=./youthichinaopenapi.yml
 
 COPY ${CONFIG_FILE} /tmp/api.yml
 
