--- a/quest/Dockerfile
+++ b/quest/Dockerfile
@@ -3,11 +3,13 @@ WORKDIR /quest
 
 ARG DEFAULT_CORE_NAME=youthchinacore
 
+ENV DEFAULT_CORE_NAME=${DEFAULT_CORE_NAME}
+
 COPY config /quest/config
 COPY mysql-connector-java-8.0.15.jar /opt/solr/contrib/dataimporthandler/lib/mysql-connector-java-8.0.15.jar
 
 EXPOSE 8983
 
 # create default core
-CMD [ "solr-precreate","${DEFAULT_CORE_NAME}","/quest/config" ] 
+CMD [ "sh", "-c", "solr-precreate ${DEFAULT_CORE_NAME} /quest/config" ] 
 
