--- a/backend.yaml
+++ b/backend.yaml
@@ -42,7 +42,7 @@ spec:
   selector:
     matchLabels:
       app: quest
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
@@ -58,6 +58,13 @@ spec:
               cpu: "500m"
           ports:
             - containerPort: 8983
+        - name: quest-importer
+          image: weyouth/quest-importer
+          imagePullPolicy: IfNotPresent
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
